fix cart issue